# oracle-poc

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  README_QUEUE.md  dashboard.md  package.json  rindexer.processed.yaml  rindexer.yaml  test-single-request.ts  vrf_oracle_evolution.md
.trunk/: trunk.yaml
abis/: VRFOracle.abi.json
contracts/: oracle.sol
docs/: architecture.md  batch-processing.md  queue-processor.md
migrations/: 001_create_pending_requests.sql
script/: deploy-contract.ts  request-randonmess.ts  utils.ts
slides-oracle/: final-slides.md  package.json  slides.md
src/: cli.rs  lib.rs  main.rs  provider.rs  queue_processor.rs
src/dashboard/: data.rs
src/database/: mod.rs
src/oracle/: mod.rs
src/relayer/: account.rs  config.rs  metrics.rs  mod.rs  scheduler.rs
src/rindexer_lib/indexers/: all_handlers.rs  mod.rs
src/rindexer_lib/indexers/zamaoracle/: mod.rs  vrf_oracle.rs
src/rindexer_lib/typings/: mod.rs  networks.rs
src/rindexer_lib/typings/zamaoracle/events/: mod.rs  vrf_oracle.rs  vrf_oracle_abi_gen.rs
test/: VRFOracle.t.sol  run-integration-test.ts
