
[package]
name = "zamaoracle"
version = "0.1.0"
edition = "2021"

[dependencies]
rindexer = { git = "https://github.com/joshstevens19/rindexer", branch = "master" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
