
[package]
name = "zamaoracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"
required-features = []

[dependencies]
rindexer = { git = "https://github.com/joshstevens19/rindexer", branch = "master" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
alloy = { version = "1.0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
rand = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
dotenvy = "0.15.7"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
anyhow = "1.0"
rust_decimal = { version = "1.37.2", features = [
  "db-postgres",
  "db-diesel-postgres",
] }
